opam-version: "1.2"
name: "tjr_net"

version: "0.0.1" # FIXME

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_net"
bug-reports: "https://github.com/tomjridge/tjr_net/issues"
dev-repo: "https://github.com/tomjridge/tjr_net.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "lwt"
]

