opam-version: "2.0"
name: "tjr_net"
version: "0.0.1" # FIXME

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_net"
bug-reports: "https://github.com/tomjridge/tjr_net/issues"
# dev-repo: "https://github.com/tomjridge/tjr_net.git"

# ----------------------------------------------------------------------

depends: [
  "lwt"
]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

